--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,12 +30,6 @@
 
         <div class="ui grid container">
 
-            <div class="row" align="center">
-                <div class="sixteen wide column">
-                    <div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
-                </div>
-            </div>
-
             <div class="mobile hidden row" align="center">
                 <div class="one wide column"></div>
                 <div class="fourteen wide column">
@@ -79,11 +73,23 @@
         <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
     </div>
     
-    <div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
+    <!-- div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div> -->
     <!-- AD Block End-->
     
     <div class="ui raised segments">
         <div class="ui vertical stripeShort segment" id="findLocationSegment">
+
+            <!-- AD Block Begin-->
+            <div class="ui mobile hidden vertical adStripe segment">
+                <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
+            </div>
+
+            <div class="ui mobile only vertical adStripe segment">
+                <div class="ui centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
+            </div>
+            <!-- AD Block End-->
+
+
             <div class="ui grid container">
                 <div class="row">
                     <div class="one wide left column"></div>
@@ -104,15 +110,6 @@
                     <div class="one wide right column"></div>
                 </div>
             </div>
-
-            <!-- AD Block Begin-->
-            <div class="ui mobile hidden vertical stripe  segment">
-                <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
-            </div>
-
-            <div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
-            <!-- AD Block End-->
-
         </div>
 
 
@@ -120,10 +117,24 @@
         <!-- Find Branch Segement -->
 
         <div class="ui white vertical stripe segment" id="findBranchSegment">
-            <div class="ui grid container">
+                <!-- AD Block Begin-->
+                <div class="ui mobile hidden vertical adStripe segment">
+                    <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
+                </div>
+
+                <div class="ui mobile only vertical adStripe segment">
+                    <div class="ui centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
+                </div>
+                <!-- AD Block End-->
+            
+                
+                <div class="ui grid container">
+                
                 <div class="row">
                     <div class="one wide left column"></div>
+
                     <div class="fourteen wide center aligned column">
+
                         <div class="ui stripe segment">
                             <h1>ICICI Bank Limited </h1>
                             <h2>Bangalore</h2>
@@ -140,14 +151,6 @@
                     <div class="one wide right column"></div>
                 </div>
             </div>
-        
-            <!-- AD Block Begin-->
-            <div class="ui mobile hidden vertical stripe  segment">
-                <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
-            </div>
-
-            <div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
-            <!-- AD Block End-->
         </div>
     </div>
 
