Adding logic to generate searchLocation and searchBranch DIvs on the fly

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,7 +53,7 @@
                         <!-- ==================== -->
                         <div class="ui large fluid search" id="findBankSearchField"> 
                             <div class="ui icon input">
-                                <input class="prompt" type="text" placeholder="Enter Bank Location ">
+                                <input class="prompt" type="text" placeholder="Search Bank Name Here">
                                 <i class="search icon"></i>
                             </div>
                             <div class="results"></div>
@@ -75,82 +75,16 @@
     
     <!-- div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div> -->
     <!-- AD Block End-->
-    
+
+
+
     <div class="ui raised segments">
-        <div class="ui vertical stripeShort segment" id="findLocationSegment">
-
-            <!-- AD Block Begin-->
-            <div class="ui mobile hidden vertical adStripe segment">
-                <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
-            </div>
-
-            <div class="ui mobile only vertical adStripe segment">
-                <div class="ui centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
-            </div>
-            <!-- AD Block End-->
-
-
-            <div class="ui grid container">
-                <div class="row">
-                    <div class="one wide left column"></div>
-                    <div class="fourteen wide center aligned column">
-                        <div class="ui stripe segment">
-                            <h1>ICICI Bank Limited </h1>
-                            <h1></h1>
-                            <p>Search For you bank Location</p>
-                        </div>
-                        <div class="ui huge fluid search" id="findLocationSearchField">
-                            <div class="ui icon input">
-                                <input class="prompt" type="text" placeholder="Enter Bank Location ">
-                                <i class="search icon"></i>
-                            </div>
-                            <div class="results"></div>
-                        </div>
-                    </div>
-                    <div class="one wide right column"></div>
-                </div>
-            </div>
+        <!-- Find Location Segment -->
+        <div class="ui vertical stripeShort segment" id="findLocationSegment" style="display:none">
         </div>
 
-
-
-        <!-- Find Branch Segement -->
-
-        <div class="ui white vertical stripe segment" id="findBranchSegment">
-                <!-- AD Block Begin-->
-                <div class="ui mobile hidden vertical adStripe segment">
-                    <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
-                </div>
-
-                <div class="ui mobile only vertical adStripe segment">
-                    <div class="ui centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div>
-                </div>
-                <!-- AD Block End-->
-            
-                
-                <div class="ui grid container">
-                
-                <div class="row">
-                    <div class="one wide left column"></div>
-
-                    <div class="fourteen wide center aligned column">
-
-                        <div class="ui stripe segment">
-                            <h1>ICICI Bank Limited </h1>
-                            <h2>Bangalore</h2>
-                            <p>Search For you bank branch</p>
-                        </div>
-                        <div class="ui huge fluid search" id="findBranchSearchField">
-                            <div class="ui icon input">
-                                <input class="prompt" type="text" placeholder="Enter Bank Branch">
-                                <i class="search icon"></i>
-                            </div>
-                            <div class="results"></div>
-                        </div>
-                    </div>
-                    <div class="one wide right column"></div>
-                </div>
-            </div>
+        <!-- Find Branch Segment -->
+        <div class="ui white vertical stripe segment" id="findBranchSegment" style="display:none">
         </div>
     </div>
 
