--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,9 +58,16 @@ h1, h2, h3, h4, h5, title {
   margin: 3em 0em;
 }
 
-.quote.stripe.segment {
-  padding: 0em;
+.ui.stripe.segment {
+    padding: 0em;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    -webkit-box-shadow: 0px;
+    box-shadow: 0px;
 }
+
 .quote.stripe.segment .grid .column {
   padding-top: 5em;
   padding-bottom: 5em;
@@ -131,6 +138,12 @@ h1, h2, h3, h4, h5, title {
     padding-top: 3rem;
     padding-bottom : 3rem;
 }
+
+ui.segment{
+    border-top : 0px;
+    border-bottom : 0px;
+}
+
 
 .ui.segments>.segment {
     border-top: 0px
