--- a/templates/results_segment.hbs
+++ b/templates/results_segment.hbs
@@ -4,18 +4,18 @@
         <div class="row">
             <div class="one wide left column"></div>
             <div class="fourteen wide center aligned column">
-                <div class="ui stripe segment">
+                <div class="ui stripe segment" style="background-color: #25BEA0;">
                     <h2>{{bankName}}</h2>
                     <p>{{bankBranch}}</p>
                     <h4 style="color:gray">IFSC</h4>
-                    <h1 id="ifsc-code">{{ifsc}}</h1>
-                    <h4 style="color:gray">Address</h4>
+                    <h1 id="ifsc-code" style="color:white">{{ifsc}}</h1>
+                    <h4 style="color:gray">Branch Address</h4>
                     <p>{{address}}</p>
                     <p>{{city}} - {{state}}</p>
                 </div>
 
-
                 <div class="row"> 
+                    <br><br>
                     <div class="center aligned column">
                         <button class="ui center aligned wide button" id="button-copy-ifsc" data-clipboard-target="#ifsc-code" style="background-color:#11a0f3;color:#ffffff">Copy IFSC</button>
                     </div>
