--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 <div class="pusher">
 
     <!-- Black segment at the top of the page...... -->
-    <div class="ui masthead center aligned basic segment" style="background-color: #FBBC09; background-image: linear-gradient(315deg, #FBBC09;0%, #FACC43 74%); background-size: cover; background-position: center center;">
+    <div class="ui masthead center aligned basic segment" style="background-color: #fbbc09e6; background-image: linear-gradient(315deg, #FBBC09;0%, #FACC43 74%); background-size: cover; background-position: center center;">
 
         <div class="ui container">
             <div class="ui large secondary inverted pointing menu" style="border-width: 0px;">
@@ -27,6 +27,8 @@
                 <a class="item">About</a>
             </div>
         </div>
+
+        <div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div> 
 
         <div class="ui grid container">
 
