Adding Meta and reducing size of google font download by importing only latin character set

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,6 +24,8 @@
 
         <!-- Site Properties -->
         <title>Find Bank IFSC - 1 Lakh Indian Banks</title>
+        
+        <meta name="Description" content="Search IFSC code, find MICR code and Address of all Banks in India. IFSC code is required for all NEFT and RTGS Online Transfer transactions.">
 
         <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 
