Adding Info Divs between all searches. Still need to add some relevant information there.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -70,14 +70,9 @@
 
 
 
-
-
-
-
-
     <!-- Info Div -->
 
-    <div class="ui grid container">
+    <div class="ui grid container" id="infoDivInitial">
         <div class="row">
 
             <div class="ui inverted one wide left column"> </div>
@@ -155,25 +150,20 @@
     <!-- div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div> -->
     <!-- AD Block End-->
 
-    <div class="ui raised segments" id="findLocationFindBranchGroupSeg" style="display:none">
+    <div class="ui segments" id="findLocationFindBranchGroupSeg" style="display:none">
         <!-- Find Location Segment -->
         <div class="ui vertical stripeShort segment" id="findLocationSegment" style="display:none">
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <div class="ui grid container" id="infoDivShowingLocationSearch" style="display:none">
+        </div>
+        
         <!-- Find Branch Segment -->
         <div class="ui white vertical stripe segment" id="findBranchSegment" style="display:none">
+        </div>
+
+    
+    <div class="ui grid container" id="infoDivShowingBranchSearch" style="display:none">
         </div>
     </div>
 
