--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,6 +54,12 @@ h1, h2, h3, h4, h5, title {
   margin: 3em 0em;
 }
 
+.ui.segments{
+border: 0 solid rgba(34,36,38,.15);
+-webkit-box-shadow: 0 0 0 0 rgba(34,36,38,.15);*/
+box-shadow: 0 0 0 0 rgba(34,36,38,.15); 
+}
+
 .ui.stripe.segment {
     padding: 0em;
     border-top-width: 0px;
