Layout changes and adding amazon ads

--- a/templates/location_search.hbs
+++ b/templates/location_search.hbs
@@ -1,6 +1,6 @@
 <div class="ui vertical stripeShort segment" id="findLocationSegment">
 
-    <div class="ui mobile hidden vertical adStripe segment">
+    <div class="ui inverted mobile hidden vertical adStripe segment" style="background: #f7f8fa;">
         <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
     </div>
 
@@ -19,7 +19,7 @@
                 </div>
                 <div class="ui huge fluid search" id="{{searchFieldID}}">
                     <div class="ui icon input">
-                        <input class="prompt" type="text" placeholder="Enter Bank Location ">
+                        <input class="prompt" type="text" placeholder="Enter Bank Location " style="text-align: center;">
                         <i class="search icon"></i>
                     </div>
                     <div class="results"></div>
