--- a/templates/info_findLocation.hbs
+++ b/templates/info_findLocation.hbs
@@ -9,9 +9,9 @@
                 <div class="ui vertical stripe segment">
                     <div class="ui two column stackable center aligned grid">
                         <div class="middle aligned row">
-                            <div class="ui seven wide column">
+                            <div class="ui six wide column">
                                 <h2 style="color: darkgray">What is RTGS?</h2>
-                                <p>Lorem Ipsum</p>
+                                <p style="font-family:Lato;text-align:justify">RTGS stands for real time gross settlement, which means that it enables money to move from one bank to another on a real time and gross basis. In other words, real time implies the beneficiary bank receives the instructions for fund transfer immediately. Gross implies that it is not combined with any other transaction and settlements. Since the funds settlement takes place in the books of the Reserve Bank of India (RBI), note that RTGS payments are final and irrevocable.</p>
                             </div>
                             <div class="ui vertical divider"></div>
                             <div class="ui seven wide column ">
