Changing city search field command to min 3 characters. Adding Amazon Leader board ad for laptops only.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,14 +25,23 @@
             </div>
         </div>
 
+        <!-- 
         <div class="ui mobile only centered mobile leaderboard test ad" data-text="Mobile Banner" id="mobileOnlyBannerAd"></div> 
-
+        -->
+        
         <div class="ui grid container">
 
             <div class="mobile hidden row" align="center">
                 <div class="one wide column"></div>
                 <div class="fourteen wide column">
-                    <div class="ui leaderboard test ad" data-text="Leaderboard"></div>
+       
+                    <script type="text/javascript" language="javascript">
+                        var aax_size='728x90';
+                        var aax_pubname = 'chapparfellow-21';
+                        var aax_src='302';
+                    </script>
+                    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+       
                 </div>
                 <div class="one wide column"></div>
             </div>
