Adding more amazon ad blocks

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -151,6 +151,15 @@
 
     
     <!-- AD Block Begin-->
+    
+    <div class="ui center aligned vertical adStripe  segment">
+        <script type="text/javascript" language="javascript">
+            var aax_size='300x250';
+            var aax_pubname = 'chapparfellow-21';
+            var aax_src='302';
+        </script>
+        <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    </div>
     <!-- 
     <div class="ui mobile hidden vertical stripe  segment">
         <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
@@ -183,6 +192,16 @@
 <div class="ui inverted vertical footer segment" style="background-color:#374353">
     <div class="ui container">
         <div class="ui stackable inverted divided equal height stackable grid">
+
+            <div class="seven wide column">
+                <script type="text/javascript" language="javascript">
+                    var aax_size='300x250';
+                    var aax_pubname = 'chapparfellow-21';
+                    var aax_src='302';
+                </script>
+                <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
+            </div> 
+
             <div class="seven wide column">
                 <h4 class="ui inverted header">Legal Disclaimer</h4>
                 <p>www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
