--- a/templates/info_findBranches.hbs
+++ b/templates/info_findBranches.hbs
@@ -11,7 +11,7 @@
                             <div class="middle aligned row">
                                 <div class="ui seven wide column">
                                     <h2 style="color: darkgray">What is NEFT?</h2>
-                                    <p>Lorem Ipsum</p>
+                                    <p style="font-family:Lato">National Electronic Funds Transfer (NEFT) is a nation-wide payment system facilitating one-to-one funds transfer. Under this Scheme, individuals can electronically transfer funds from any bank branch to any individual having an account with any other bank branch in the country participating in the Scheme.</p>
                                 </div>
                                 <div class="ui vertical divider"></div>
                                 <div class="ui seven wide column ">
