--- a/views/index.hbs
+++ b/views/index.hbs
@@ -140,19 +140,11 @@
             <div class="ui one wide right column"> </div>
         </div>
     
-        <div class="ui divider"> </div>
+        <div class="ui divider" id="divider_findLocation"> </div>
     </div>
-
-
-
-
-
-
-
     
     <!-- AD Block Begin-->
-    
-    <div class="ui center aligned vertical adStripe  segment">
+    <div class="ui vertical adStripe center aligned segment" id="amazon_ad">
         <script type="text/javascript" language="javascript">
             var aax_size='300x250';
             var aax_pubname = 'chapparfellow-21';
