--- a/templates/info_findLocation.hbs
+++ b/templates/info_findLocation.hbs
@@ -11,7 +11,7 @@
                         <div class="middle aligned row">
                             <div class="ui seven wide column">
                                 <h2 style="color: darkgray">What is RTGS?</h2>
-                                <p style="font-family:Lato">'RTGS' stands for Real Time Gross Settlement. RTGS is continuous (real-time) settlement of funds individually on an order by order basis (without netting). 'Real Time' means the processing of instructions at the time they are received rather than at some later time.'Gross Settlement' means the settlement of funds transfer instructions occurs individually (on an instruction by instruction basis). Remember that the funds settlement takes place in the books of the Reserve Bank of India, the payments are final and irrevocable.
+                                <p style="font-family:Lato;text-align:justify">'RTGS' stands for Real Time Gross Settlement. RTGS is continuous (real-time) settlement of funds individually on an order by order basis (without netting). 'Real Time' means the processing of instructions at the time they are received rather than at some later time.'Gross Settlement' means the settlement of funds transfer instructions occurs individually (on an instruction by instruction basis). Remember that the funds settlement takes place in the books of the Reserve Bank of India, the payments are final and irrevocable.
 </p>
                             </div>
                             <div class="ui vertical divider"></div>
