Adding Amazon Ad Widgets

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -145,15 +145,11 @@
     
     <!-- AD Block Begin-->
     <div class="ui vertical adStripe center aligned segment" id="amazon_ad">
-        <script type="text/javascript" language="javascript">
-            var aax_size='300x250';
-            var aax_pubname = 'chapparfellow-21';
-            var aax_src='302';
-        </script>
-        <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
+
+        <SCRIPT charset="utf-8" type="text/javascript" src="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2Fcabc79bb-9106-4b34-a15b-ff8a5810b548&Operation=GetScriptTemplate"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2Fcabc79bb-9106-4b34-a15b-ff8a5810b548&Operation=NoScript">Amazon.in Widgets</A></NOSCRIPT>
     </div>
     <!-- 
-    <div class="ui mobile hidden vertical stripe  segment">
+        <div class="ui mobile hidden vertical stripe  segment">
         <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
     </div>
     --> 
@@ -185,18 +181,13 @@
     <div class="ui container">
         <div class="ui stackable inverted divided equal height stackable grid">
 
-            <div class="seven wide column">
-                <script type="text/javascript" language="javascript">
-                    var aax_size='300x250';
-                    var aax_pubname = 'chapparfellow-21';
-                    var aax_src='302';
-                </script>
-                <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
+            <div class="middle aligned seven wide column">
+            <SCRIPT charset="utf-8" type="text/javascript" src="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2F90cb6e6e-11ea-4bbe-a19e-3e9ef8eaed0e&Operation=GetScriptTemplate"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2F90cb6e6e-11ea-4bbe-a19e-3e9ef8eaed0e&Operation=NoScript">Amazon.in Widgets</A></NOSCRIPT>
             </div> 
 
             <div class="seven wide column">
                 <h4 class="ui inverted header">Legal Disclaimer</h4>
-                <p>www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
+                <p style="text-align:justify">www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
 
                 <p><b>Data last updated :</b> 23-October-2018</p>
             </div>
