Improving meta data and description.
Giving more emphasis to popular banks like SBI, PNB etc..

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -51,9 +51,9 @@
                 <div class="fourteen wide column">
                     <div class="ui center aligned stackable container">
                         <h1 class="ui header large" style="font-size: 5em">
-                            IFSC Finder 
+                            Find IFSC Code 
                         </h1>
-                        <h3>Find Bank IFSC in 3 easy steps</h2>
+                        <h3>Find Bank IFSC code in 3 easy steps</h2>
                         <div class="row"><br><br><br></div>
 
                         <!-- ==================== -->
