--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,13 +38,14 @@
 
 
         <!-- Site Properties -->
-        <title>Find Bank IFSC - 1 Lakh Indian Banks</title>
-        
+        <title>Bank IFSC Code, SBI, PNB, ICICI, all banks in India</title>
+        <!-- S
         <meta name="Description" content="Search IFSC code, find MICR code and Address of all Banks in India. IFSC code is required for all NEFT and RTGS Online Transfer transactions.">
+        -->
+        <meta name="Description" content="Search IFSC code, find MICR code and address of State Bank Of India sbi ifsc code, ICICI Bank ifsc code, IDBI Bank ifsc code, Punjab National Bank pnb ifsc code. Find ifsc code for all banks in India. Reserve Bank of India (RBI) requires ifsc code for all NEFT and RTGS Online Transfer transactions.">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.0/mustache.min.js"></script>
-        
         
         <script type="text/javascript" src="javascripts/script.js"></script>
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
