--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,13 +18,15 @@
             gtag('config', 'UA-127410136-1');
         </script>
 
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({
-                google_ad_client: "ca-pub-8804602103377997",
-                enable_page_level_ads: true
-            });
-        </script>
+        <!--IFSC Finder today ifsc.today@gmail.com -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2125388685614259",
+    enable_page_level_ads: true
+  });
+</script>
+
 
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
