Adding Bing Webmaster tools

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,6 +18,8 @@
             gtag('config', 'UA-127410136-1');
         </script>
 
+        <meta name="msvalidate.01" content="4668BE2493E0B673A2648478304FC472" />
+
         <!--IFSC Finder today ifsc.today@gmail.com -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
